--- a/docs/pages/reference/terraform-provider/resources/database.mdx
+++ b/docs/pages/reference/terraform-provider/resources/database.mdx
@@ -162,6 +162,7 @@ Optional:
 - `iam_auth` (Boolean) IAMAuth indicates whether database IAM authentication is enabled.
 - `instance_id` (String) InstanceID is the RDS instance identifier.
 - `resource_id` (String) ResourceID is the RDS instance resource identifier (db-xxx).
+- `security_groups` (List of String) SecurityGroups is a list of attached security groups for the RDS instance.
 - `subnets` (List of String) Subnets is a list of subnets for the RDS instance.
 - `vpc_id` (String) VPCID is the VPC where the RDS is running.
 
