Fix unresolves partial params (#47359)
This fixes a build issue when using the new docs engine.

--- a/docs/pages/includes/database-access/aws-db-iam-policy-picker.mdx
+++ b/docs/pages/includes/database-access/aws-db-iam-policy-picker.mdx
@@ -3,12 +3,12 @@
 <Tabs dropdownView dropdownCaption="Database Type">
 <TabItem label="DocumentDB">
 
-(!docs/pages/includes/database-access/reference/aws-iam/documentdb/access-policy.mdx!)
+(!docs/pages/includes/database-access/reference/aws-iam/documentdb/access-policy.mdx dbUserRole="DatabaseUserRole" !)
 
 </TabItem>
 <TabItem label="DynamoDB">
 
-(!docs/pages/includes/database-access/reference/aws-iam/dynamodb/access-policy.mdx!)
+(!docs/pages/includes/database-access/reference/aws-iam/dynamodb/access-policy.mdx dbUserRole="DatabaseUserRole" !)
 
 </TabItem>
 <TabItem label="ElastiCache Redis">
@@ -18,7 +18,7 @@
 </TabItem>
 <TabItem label="Keyspaces">
 
-(!docs/pages/includes/database-access/reference/aws-iam/keyspaces/access-policy.mdx!)
+(!docs/pages/includes/database-access/reference/aws-iam/keyspaces/access-policy.mdx dbUserRole="DatabaseUserRole" !)
 
 </TabItem>
 <TabItem label="MemoryDB">
@@ -28,7 +28,7 @@
 </TabItem>
 <TabItem label="Opensearch">
 
-(!docs/pages/includes/database-access/reference/aws-iam/opensearch/access-policy.mdx!)
+(!docs/pages/includes/database-access/reference/aws-iam/opensearch/access-policy.mdx dbUserRole="DatabaseUserRole" !)
 
 </TabItem>
 <TabItem label="RDS">
@@ -43,12 +43,12 @@
 </TabItem>
 <TabItem label="Redshift">
 
-(!docs/pages/includes/database-access/reference/aws-iam/redshift/access-policy.mdx!)
+(!docs/pages/includes/database-access/reference/aws-iam/redshift/access-policy.mdx dbUserRole="DatabaseUserRole" !)
 
 </TabItem>
 <TabItem label="Redshift Serverless">
 
-(!docs/pages/includes/database-access/reference/aws-iam/redshift-serverless/access-policy.mdx!)
+(!docs/pages/includes/database-access/reference/aws-iam/redshift-serverless/access-policy.mdx dbUserRole="DatabaseUserRole" !)
 
 </TabItem>
 </Tabs>
