--- a/docs/pages/reference/terraform-provider/data-sources/static_host_user.mdx
+++ b/docs/pages/reference/terraform-provider/data-sources/static_host_user.mdx
@@ -32,7 +32,7 @@ Required:
 Optional:
 
 - `description` (String) description is object description.
-- `expires` (String)
+- `expires` (String) expires is a global expiry time header can be set on any resource in the system.
 - `labels` (Map of String) labels is a set of labels.
 
 
