--- a/docs/pages/reference/terraform-provider/resources/session_recording_config.mdx
+++ b/docs/pages/reference/terraform-provider/resources/session_recording_config.mdx
@@ -55,5 +55,5 @@ Optional:
 Optional:
 
 - `mode` (String) Mode controls where (or if) the session is recorded.
-- `proxy_checks_host_keys` (Boolean)
+- `proxy_checks_host_keys` (Boolean) ProxyChecksHostKeys is used to control if the proxy will check host keys when in recording mode.
 
