--- a/docs/pages/reference/operator-resources/resources.teleport.dev_samlconnectors.mdx
+++ b/docs/pages/reference/operator-resources/resources.teleport.dev_samlconnectors.mdx
@@ -71,10 +71,13 @@ resource, which you can apply after installing the Teleport Kubernetes operator.
 
 |Field|Type|Description|
 |---|---|---|
+|cert|string|Cert is the identity provider certificate PEM. IDP signs `<Response>` responses using this certificate.|
 |enabled|boolean|Enabled specified whether this SAML connector supports MFA checks. Defaults to false.|
-|entity_descriptor|string|EntityDescriptor is XML with descriptor. It can be used to supply configuration parameters in one XML file rather than supplying them in the individual elements.|
+|entity_descriptor|string|EntityDescriptor is XML with descriptor. It can be used to supply configuration parameters in one XML file rather than supplying them in the individual elements. Usually set from EntityDescriptorUrl.|
 |entity_descriptor_url|string|EntityDescriptorUrl is a URL that supplies a configuration XML.|
 |force_authn|string or integer|ForceAuthn specified whether re-authentication should be forced for MFA checks. UNSPECIFIED is treated as YES to always re-authentication for MFA checks. This should only be set to NO if the IdP is setup to perform MFA checks on top of active user sessions. Can be either the string or the integer representation of each option.|
+|issuer|string|Issuer is the identity provider issuer. Usually set from EntityDescriptor.|
+|sso|string|SSO is the URL of the identity provider's SSO service. Usually set from EntityDescriptor.|
 
 ### spec.signing_key_pair
 
