--- a/docs/pages/enroll-resources/server-access/guides/host-user-creation.mdx
+++ b/docs/pages/enroll-resources/server-access/guides/host-user-creation.mdx
@@ -438,3 +438,5 @@ on the hosts.
 
 - Configure automatic user provisioning for [Database Access](../../database-access/auto-user-provisioning.mdx).
 - Configure automatic user provisioning for [desktop access](../../../reference/agent-services/desktop-access-reference/user-creation.mdx).
+- Configure automatic user provisioning with [Terraform](../../../reference/terraform-provider/resources/role.mdx).
+Note when using the terraform provider that some values may be different than described in this guide.
