--- a/docs/pages/admin-guides/access-controls/access-lists.mdx
+++ b/docs/pages/admin-guides/access-controls/access-lists.mdx
@@ -11,4 +11,6 @@ traits, which then tie easily back into Teleport's existing RBAC system.
 
 [Getting Started with Access Lists](./access-lists/guide.mdx)
 
+[Nested Access Lists](./access-lists/nested-access-lists.mdx)
+
 [Access List Reference](../../reference/access-controls/access-lists.mdx)
