--- a/docs/pages/reference/access-controls/access-lists.mdx
+++ b/docs/pages/reference/access-controls/access-lists.mdx
@@ -29,10 +29,10 @@ to live on the order of hours or days.
 
 ## Access List Ownership
 
-Access List owners are Teleport users who are granted special privileges over
+Access List owners are Teleport users or nested Access Lists who are granted special privileges over
 an Access List. These owners are defined explicitly as part of the Access List, and
 must be added by a Teleport user who has RBAC access to access lists, which the preset `editor`
-role has.. Owners must meet requirements in order for their ownership to be effective.
+role has. Owners must meet requirements in order for their ownership to be effective.
 
 Provided owners meet requirements, owners are able to do the following:
 
@@ -46,13 +46,50 @@ and traits are granted by the Access List.
 
 ## Access List Membership
 
-Access List members are Teleport users who are granted the roles and traits specified
-by the Access List. Upon login, users will be granted these roles and traits along with
-their statically defined user permissions. These roles and traits will then tie into
-Teleport's existing RBAC system. Members can be optionally granted an expire date, after
-which their membership will no longer confer any grants to the user.
+Access List members are Teleport users or nested Access Lists who are granted the roles
+and traits specified by the Access List. Upon login, users will be granted these
+roles and traits along with their statically defined user permissions. These roles and
+traits will then tie into Teleport's existing RBAC system. Members can be optionally
+granted an expiry date, after which their membership will no longer confer any
+grants to the user.
 
 Members must meet requirements in order for their membership to be effective.
+
+## Nested Access Lists
+
+Access Lists can be nested within other Access Lists as members or owners. This enables
+hierarchical permission structures where permissions can be inherited from multiple levels of
+parent Access Lists. Inheritance is recursive – members of a child Access List can
+themselves be Access Lists with their own members, and so on.
+
+### Membership Inheritance
+
+If an Access List is a member of another Access List, members of the nested Access List will
+inherit the member grants (roles and traits) of the parent Access List.
+
+Users granted membership through inheritance must meet both the nested Access List's membership
+requirements, and the parent Access List's membership requirements in order for the
+membership to be valid.
+
+### Ownership Inheritance
+
+If an Access List is an owner of another Access List, members of the nested Access List will
+inherit the owner grants (roles and traits), as well as ownership of, the parent Access List.
+
+Users granted ownership through inheritance must meet both the nested Access List's
+membership requirements, and the parent Access List's ownership requirements in order
+for the ownership to be valid.
+
+### Limitations
+
+- **Circular Nesting**: Circular nesting is not allowed. Access Lists' membership and
+ownership cannot be self-referential, directly or indirectly.
+- **Nesting Depth**: Nesting is limited to a maximum depth of 10 levels. This means that
+a child Access List cannot be more than 10 levels removed from the root Access List in
+the hierarchy.
+- **Deletion**: Deleting Access Lists that are members or owners of other Access Lists
+is not allowed. Access Lists must be removed from all parent Access Lists before they
+can be deleted.
 
 ## Access List Auditing
 
@@ -91,12 +128,13 @@ spec:
       start: 336h # two weeks
     next_audit_date: "2025-01-01T00:00:00Z"
   description: "A description of the Access List and its purpose"
-  # owners are a list of Teleport users who own the Access List. Provided the owners
-  # meet the ownership requirements, these users can control membership requirements
-  # and membership to the Access List.
+  # owners are a list of Teleport users or Access Lists who own the Access List.
+  # Provided the owners meet the ownership requirements, these users can control
+  # membership requirements and membership to the Access List.
   owners:
   - description: test user 1
     name: teleport-admin
+    membership_kind: MEMBERSHIP_KIND_USER
   # ownership_requires defines roles and traits that are required for an owner to be
   # able to manage the Access List and its membership.
   ownership_requires:
@@ -116,7 +154,7 @@ spec:
     roles:
     - access
     traits:
-      trait1: 
+      trait1:
       - value1
   # membership_requires defines roles and traits that are required for a member
   # to be granted the above roles and traits. Even if a user has been added as a
@@ -126,7 +164,7 @@ spec:
     roles:
     - required_role1
     traits:
-      required_trait1: 
+      required_trait1:
       - required_value1
 ```
 
