--- a/docs/pages/enroll-resources/workload-identity/introduction.mdx
+++ b/docs/pages/enroll-resources/workload-identity/introduction.mdx
@@ -142,16 +142,23 @@ The SPIFFE Workload API is implemented as a configurable service within the
 need to request SVIDs, and they can then use the Workload API exposed by `tbot`
 to fetch SVIDs and Trust Bundles.
 
-Teleport's Workload Identity currently only supports issuing X.509-SVIDs.
+Teleport's Workload Identity supports issuing X.509-SVIDs and JWT-SVIDs.
 
 ## Next steps
 
-- [Getting Started](./getting-started.mdx): How to configure Teleport for Workload Identity.
-- [Best Practices](./best-practices.mdx): Best practices for using Workload Identity in Production.
+Learn more about Teleport Workload Identity:
+
 - [Workload Attestation](./workload-attestation.mdx): Learn about using Workload Attestation to securely issue SVIDs to specific workloads.
 - [Federation](./federation.mdx): Learn about using Federation to allow workloads to trust workloads from other trust domains.
+- [JWT SVIDs](./jwt-svids.mdx): Learn about the short-lived JWTs issued by Workload Identity.
+- [Best Practices](./best-practices.mdx): Best practices for using Workload Identity in Production
+
+Learn how to configure Teleport Workload Identity for specific use-cases:
+
+- [Getting Started](./getting-started.mdx): How to configure Teleport for Workload Identity.
 - [TSH Support](./tsh.mdx): How to use `tsh` with Workload Identity to issue SVIDs to users.
 - [AWS Roles Anywhere](./aws-roles-anywhere.mdx): Configuring AWS to accept Workload ID certificates as authentication using AWS Roles Anywhere.
+- [GCP Workload Identity Federation](./gcp-workload-identity-federation-jwt.mdx): Configuring GCP to accept Workload ID JWTs as authentication using GCP Workload Identity Federation.
 
 ### Other resources
 
