Datadog Incident Management guide (#46514)
* Datadog Incident Management docs

* Backtick

* Update datadog config example

* Update docs

* Omit auto approvals

* Omit helm reference

* Fix lint

* Focus on hosted version

* Update config.json

* Address feedback

- Separate guide for hosted vs self-hosted
- Include jq prerequisite
- Smaller screenshots
- Clarify acceptable recipient types
- Clarify acceptable reviewer input

* Update docs

- Remove self-hosted guide
- Remove outdated diagram
- Include editor role prerequisite
- Include AMR link
- Include auto approvals setup

* Remove self-hosted examples

* Fix lint

* Change datadog_auto_approvals -> teleport.dev/schedules

* Use relative link

--- a/docs/pages/admin-guides/access-controls/access-request-plugins.mdx
+++ b/docs/pages/admin-guides/access-controls/access-request-plugins.mdx
@@ -29,6 +29,7 @@ The following Access Request plugins are hosted on Teleport Cloud:
 - PagerDuty
 - ServiceNow
 - Slack
+- Datadog
 
 ## Self-hosting Access Request plugins
 
