Fix SEO issues in the docs (#47521)
- Fix broken image reference.
- Fix duplicate titles.

--- a/docs/pages/reference/access-controls/access-controls.mdx
+++ b/docs/pages/reference/access-controls/access-controls.mdx
@@ -1,6 +1,5 @@
 ---
-title: Access Controls
-h1: Access Controls References
+title: Access Controls References
 description: Contains guides to configuring authentication and authorization in Teleport.
 ---
 
