--- a/docs/pages/reference/machine-id/machine-id.mdx
+++ b/docs/pages/reference/machine-id/machine-id.mdx
@@ -1,6 +1,5 @@
 ---
-title: Machine ID
-h1: Machine ID References
+title: Machine ID References
 description: Configuration and CLI reference for Teleport Machine ID.
 ---
 
