--- a/docs/pages/admin-guides/access-controls/access-request-plugins/ssh-approval-mattermost.mdx
+++ b/docs/pages/admin-guides/access-controls/access-request-plugins/ssh-approval-mattermost.mdx
@@ -101,7 +101,7 @@ Set the "Username", "Display Name", and "Description" fields according to how
 you would like the Mattermost plugin bot to appear in your workspace. Set "Role"
 to "Member".
 
-You can <a href="../../../img/enterprise/plugins/teleport_bot@2x.png"
+You can <a href="../../../../img/enterprise/plugins/teleport_bot@2x.png"
 download>download</a> our avatar to set as your Bot Icon.
 
 Set "post:all" to "Enabled".
