feat: Allow including Access Lists as nested members and owners
- Recursively check for accesslist membership

- Allow adding/removing/listing included access lists in acl commands

- Add a recursive test

- Use dynamic access lists structure from RFD

- Resolve proto changes

- Exclude 'list' members from Access List memberCount

- Calc Access List member count with members of type 'list' excluded,
  return seperately to front end

- Update examples/integrations

- Update crd docs

- Update tf docs

- Perform calculation of inherited roles/traits to AccessList service in
  order to utilize cache and minimize number of requests.

- Grant Okta integration RO for Access Lists

- Update AccessListMember-* events

- Include count for inherited grants

- Include MembershipKind of affected member(s)

- Emit inherited grants / members' MembershipKind for AccessListMember-*
  events

- Update notified owners for Access Requests

- Ensure dynamic owners are notified for Access Requests

- Ensure dynamic owners are notified via Slack integration

- Add `accesslistconv.{ToOwnerProto/FromOwnerProto}` for convenience

- Optionally pass an AbortSignal to `fetchAccessLists` in Web UI

chore: Consolidate common nested Access List funcs

- Move common nested-AccessList-related funcs to
  lib/accesslists/hierarchy

- Modify Grant inheritance so Members in lists added as Owners inherit
  Ownership and OwnerGrants, instead of just Ownership

- Update UserLoginStateGenerator to reflect this change in Grant
  inheritance, and to not store inherited grants on `state` object

- Don't check membership/ownership of AccessList while User is locked

- Replace usages of `services.IsAccessListOwner` with `Hierarchy`

- Replace usages of `services.IsAccessListOwner/IsAccessListMember` with
  equivelant funcs from `Hierarchy`

- Remove final references to AccessListMembershipChecker

- Don't allow ACL deletion when member/owner in other lists

- Guard Access List deletion behind membership/ownersh

--- a/docs/pages/reference/operator-resources/resources.teleport.dev_accesslists.mdx
+++ b/docs/pages/reference/operator-resources/resources.teleport.dev_accesslists.mdx
@@ -83,6 +83,7 @@ resource, which you can apply after installing the Teleport Kubernetes operator.
 |---|---|---|
 |description|string|description is the plaintext description of the owner and why they are an owner.|
 |ineligible_status|string or integer|ineligible_status describes if this owner is eligible or not and if not, describes how they're lacking eligibility. Can be either the string or the integer representation of each option.|
+|membership_kind|string or integer|membership_kind describes the type of membership, either `MEMBERSHIP_KIND_USER` or `MEMBERSHIP_KIND_LIST`. Can be either the string or the integer representation of each option.|
 |name|string|name is the username of the owner.|
 
 ### spec.ownership_requires
