--- a/docs/pages/admin-guides/access-controls/access-lists/nested-access-lists.mdx
+++ b/docs/pages/admin-guides/access-controls/access-lists/nested-access-lists.mdx
@@ -13,7 +13,7 @@ This guide will help you:
 - Create a nested Access List
 - Verify inherited permissions granted through the nested Access List
 
-### How it works
+## How it works
 
 Let's break down inheritance in Access Lists. Imagine two Access Lists you might have in an organization:
 "Engineering Team" and "Production Access". "Engineering Team" represents a group of engineers, while
